--- a/app/static/styles/intents_style.css
+++ b/app/static/styles/intents_style.css
@@ -13,6 +13,7 @@ body {
   
 .flex-item-left {
     flex: 20%;
+    /* width: 18.2%; */
     min-width: 190px;
     max-width: 250px;
     max-height: 100%;
@@ -25,6 +26,8 @@ body {
     box-shadow: 2px 0 5px #888888;
     display: flex;
     flex-direction: column;
+    /* position: absolute;
+    z-index: 666; */
 }
 
 @media screen and (max-width: 650px) {
@@ -37,7 +40,9 @@ body {
 }
   
 .flex-item-right {
+    /* position: relative; */
     flex: 90%;
+    /* width: 81.8%; */
     max-height: 100%;
     overflow-y: auto;
 }
@@ -137,7 +142,7 @@ body {
 } */
 
 .intent-item form button {
-    font-size: 0.8rem;
+    font-size: 0.6rem;
     line-height: 100%;
     vertical-align: middle;
 }
